[gd_scene load_steps=14 format=3 uid="uid://dbqd80d1l70t4"]

[ext_resource type="Theme" uid="uid://bsi5c1o138wn4" path="res://Theme.tres" id="1_fos0i"]
[ext_resource type="Script" uid="uid://beuccnthoabwk" path="res://Main.gd" id="1_glv2v"]
[ext_resource type="Texture2D" uid="uid://qpowt8nxanbj" path="res://Images/tamamo.png" id="2_r0du0"]
[ext_resource type="Texture2D" uid="uid://b2ypti31necbr" path="res://Images/icon-config.svg" id="3_3dxm6"]
[ext_resource type="Texture2D" uid="uid://dhghiuefn05vy" path="res://Images/tamamo-handyou.png" id="3_cm0pq"]
[ext_resource type="Texture2D" uid="uid://yib5kbnmqiot" path="res://Images/tamamo-handup.png" id="4_fos0i"]
[ext_resource type="Texture2D" uid="uid://bfde0cfunamdg" path="res://Images/select-character-placeholder.png" id="4_trn2v"]
[ext_resource type="Texture2D" uid="uid://dn3bjstcka6te" path="res://Images/icon-close.svg" id="7_lgr22"]

[sub_resource type="Animation" id="Animation_lgr22"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tamamo-handup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tamamo-handup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(221, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tamamo-handyou:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tamamo-handyou:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.136111, 0.136111)]
}

[sub_resource type="Animation" id="Animation_3dxm6"]
resource_name = "points"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tamamo-handup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tamamo-handup:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(221, 91), Vector2(221, 42), Vector2(221, 91), Vector2(221, 42), Vector2(221, 91)]
}

[sub_resource type="Animation" id="Animation_trn2v"]
resource_name = "points_and_you"
length = 1.7615
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tamamo-handup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.85, 1.09, 1.3, 1.49999, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tamamo-handup:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.85, 1.225, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(221, 91), Vector2(221, 27.705), Vector2(221, 42), Vector2(221, 91)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tamamo-handyou:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.85, 1.0882, 1.3015, 1.50073),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tamamo-handyou:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.849145, 1.09923, 1.28495, 1.34747, 1.4, 1.48418),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.136111, 0.136111), Vector2(0.211, 0.211), Vector2(0.136111, 0.136111), Vector2(0.236, 0.236), Vector2(0.136111, 0.136111), Vector2(0.136111, 0.136111)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03owx"]
_data = {
&"RESET": SubResource("Animation_lgr22"),
&"points": SubResource("Animation_3dxm6"),
&"points_and_you": SubResource("Animation_trn2v")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trn2v"]
bg_color = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fos0i")
script = ExtResource("1_glv2v")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Starts the program.
If \"keep alive\" is checked, 
it will check the screen 
every 1s. If not, it will 
check only when you click 
\"Start\"."
theme_type_variation = &"ButtonStyled"
toggle_mode = true
text = "Start"

[node name="AutoToggle" type="CheckButton" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "If checked, screen will be 
checked every 1s so you 
won't have to start it each 
time choices show up."
button_pressed = true
text = "Loop"
flat = true

[node name="AlwaysOnTopToggle" type="CheckButton" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "If checked, the app will
always sit on top of the
screen, this way, you can
position it in front of
unused areas of the game."
button_pressed = true
text = "Always on top"
flat = true

[node name="SettingsMenuButton" type="Button" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Open settings menu"
icon = ExtResource("3_3dxm6")
flat = true
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemPreview" type="TextureRect" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 5
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CareerCharacterLabel" type="Label" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Select career character >"

[node name="ClickToChangeLabel" type="Label" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 11
text = "Click to change >"

[node name="CharacterSelectButton" type="Button" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
flat = true

[node name="SelectedCharacter" type="TextureRect" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/CharacterSelectButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -22.0
offset_bottom = 84.0
grow_horizontal = 2
size_flags_horizontal = 8
tooltip_text = "Click to select the 
character you are using on 
your current career."
texture = ExtResource("4_trn2v")
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="ImagePreview" type="TextureRect" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="Tamamo" type="TextureRect" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
mouse_filter = 2
texture = ExtResource("2_r0du0")
expand_mode = 3
stretch_mode = 6

[node name="Tamamo-handyou" type="Sprite2D" parent="VBoxContainer2/HBoxContainer"]
visible = false
position = Vector2(223, 48)
scale = Vector2(0.136111, 0.136111)
texture = ExtResource("3_cm0pq")

[node name="Tamamo-handup" type="Sprite2D" parent="VBoxContainer2/HBoxContainer"]
visible = false
position = Vector2(221, 37)
scale = Vector2(0.343212, 0.343212)
texture = ExtResource("4_fos0i")

[node name="TamanimationPlayer" type="AnimationPlayer" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_03owx")
}

[node name="CaptureTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Settings" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trn2v")

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2

[node name="CloseSettingsButton" type="Button" parent="Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Close settings menu"
icon = ExtResource("7_lgr22")
flat = true
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SwitchScreenButton" type="Button" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Changes the screen to be 
scanned to a different 
screen."
theme_type_variation = &"ButtonStyled"
text = "Switch Screen"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Screen"

[node name="CurrentScreenLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="DisableAnims" type="CheckButton" parent="Settings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Disables Tamamo helping 
you out by pointing at 
choice rewards if that is 
too distracting for you."
text = "Disable Tamanimations"

[node name="CharacterSelect" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trn2v")

[node name="MarginContainer" type="MarginContainer" parent="CharacterSelect"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelect/MarginContainer"]
layout_mode = 2

[node name="CloseCharacterSelectButton" type="Button" parent="CharacterSelect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("7_lgr22")
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterSelect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterList" type="FlowContainer" parent="CharacterSelect/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/AutoToggle" to="." method="_on_auto_toggle_toggled"]
[connection signal="toggled" from="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/AlwaysOnTopToggle" to="." method="_on_always_on_top_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/SettingsMenuButton" to="." method="_on_settings_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/CharacterSelectButton" to="." method="_on_character_select_button_pressed"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_capture_timer_timeout"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/HBoxContainer/SwitchScreenButton" to="." method="_on_switch_screen_button_pressed"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/DisableAnims" to="." method="_on_disable_anims_toggled"]
[connection signal="pressed" from="CharacterSelect/MarginContainer/VBoxContainer/CloseCharacterSelectButton" to="." method="_on_close_character_select_button_pressed"]
